MULE-7299: Increased max memory for integration tests